--- a/chatspace/app/assets/stylesheets/application.scss
+++ b/chatspace/app/assets/stylesheets/application.scss
@@ -1,12 +1,12 @@
+@import "font-awesome";
 @import "config/colors";
 @import "config/font-size";
 @import "reset";
 @import "mixins/mixin";
 @import "mixins/vendor_prefix";
-@import "modules/side_bar";
 @import "modules/chat";
-@import "messages/messages.scss";
-@import "font-awesome";
-@import "modules/user";
-@import "config/colors";
 @import "modules/flash";
+@import "modules/side_bar";
+@import "modules/user";
+@import "modules/group";
+@import "messages/messages.scss"
